[project]
name = "jarvin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "ffmpeg>=1.4",
    "ipython>=8.32.0",
    "keyboard>=0.13.5",
    "kokoro>=0.2.2",
    "litellm>=1.60.8",
    "numpy>=2.2.2",
    "pip>=25.0.1",
    "pydub>=0.25.1",
    "scipy>=1.15.1",
    "setuptools>=75.8.0",
    "simpleaudio>=1.0.4",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "transformers>=4.48.3",
    "webrtcvad>=2.0.10",
]
